2008-08-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-child-meta.c:
	(clutter_child_meta_set_property),
	(clutter_child_meta_class_init): Make the :container and
	:actor properties of ChildMeta construct-only, to allow
	bindings to actually use ChildMeta without abusing the API.

	* clutter/clutter-container.c (create_child_meta): Instead of
	setting the members of the ChildMeta structure, use the
	constructor properties.

2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-keysyms.h: Resync with keysymdef.h inside Xorg.

2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c:
	(clutter_script_default_connect): Improve wording and debug
	messages in the default autoconnection for signal handlers.

2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script-parser.c:
	* clutter/clutter-script-private.h: Clean up the code; add a
	conversion function for reading a ClutterColor out of a
	JSON object or array definition.

	* clutter/clutter-script.c: Clean up the code; document properly
	how we translate from type name to type function.

2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c: Rework and improve the documentation
	of the thread-safe timeout and idle source installer functions.

2008-08-01  Neil Roberts  <neil@o-hand.com>

	Bug 945 - Clipping+fbo cloning bugs

	* clutter/cogl/gl/cogl.c: 
	* clutter/cogl/gles/cogl.c: 
	* clutter/cogl/cogl.h.in: Add cogl_clip_stack_save,
	cogl_clip_stack_restore, cogl_viewport and cogl_frustum.

	* clutter/cogl/gl/cogl-fbo.h: 
	* clutter/cogl/gl/cogl-fbo.c: Try to attach a stencil buffer when
	creating an FBO.

	* clutter/cogl/common/cogl-clip-stack.c: Add functions to save and
	restore the whole state of the stack.

	* clutter/clutter-texture.c (clutter_texture_paint): When
	rendering the FBO source, setup a temporary asymmetric perspective
	projection matrix to render it as it would appear on screen.
